# Uber_ride_predictor

./: MLmodel.ipynb  app.py  model.pkl  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
